ticketing/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: asia.gcr.io/macbigduck/thetkpark-ticketing-auth
        resources:
          limits:
            memory: "512Mi"
            cpu: "400m"
          requests:
            memory: "256Mi"
            cpu: "200m"
        # ports:
        # - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - port: 3000
      targetPort: 3000
      name: auth
      protocol: TCP
