ticketing/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: asia.gcr.io/macbigduck/thetkpark-ticketing-client
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
    name: client
    protocol: TCP
