ticketing/infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
      - name: expiration
        image: asia.gcr.io/macbigduck/thetkpark-ticketing-expiration
        resources:
          limits:
            memory: "512Mi"
            cpu: "400m"
          requests:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-srv
spec:
  selector:
    app: expiration
  ports:
    - port: 3000
      targetPort: 3000
      name: expiration
      protocol: TCP
