ticketing/infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: asia.gcr.io/macbigduck/thetkpark-ticketing-orders
        resources:
          limits:
            memory: "512Mi"
            cpu: "400m"
          requests:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - port: 3000
      targetPort: 3000
      name: orders
      protocol: TCP
