ticketing/infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - name: payments
        image: asia.gcr.io/macbigduck/thetkpark-ticketing-payments
        resources:
          limits:
            memory: "512Mi"
            cpu: "400m"
          requests:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  ports:
    - port: 3000
      targetPort: 3000
      name: payments
      protocol: TCP
